@@ -1,3 +1,8 @@
+2006-03-15  Adam Piatyszek  <ediap@users.sourceforge.net>
+
+	* itpp/itconfig.h, itpp/base/newton_search.h, itpp/base/poly.h:
+	Documentation fixes related to Doxygen groups (modules).
+
 2006-03-14  Adam Piatyszek  <ediap@users.sourceforge.net>
 
 	* doc/local/installation.doc: Added installation instructions for
